force-app/main/default/objects/Case_Product__c/fields/Anticipated_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Annual_Amount__c</fullName>
    <label>Anticipated Annual Dollar value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>