force-app/main/default/objects/Case_Product__c/fields/Anticipated_Annual_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Annual_Number_of_Units__c</fullName>
    <label>Anticipated Annual Number of Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>