force-app/main/default/objects/Case_Product__c/fields/Anticipated_First_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_First_Order_Amount__c</fullName>
    <label>Anticipated First Order Dollar Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>