force-app/main/default/objects/Case_Product__c/fields/Anticipated_First_Order_Volume__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_First_Order_Volume__c</fullName>
    <label>Anticipated First Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>