force-app/main/default/objects/Case_Product__c/fields/Anticipated_Type__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Type__c</fullName>
    <label>Anticipated Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Dollar Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>