force-app/main/default/objects/Case_Product__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>This Customer Only (default)</fullName>
            </value>
            <value>
                <fullName>This Customer Only - Specific Time Frame</fullName>
            </value>
            <value>
                <fullName>Sales District/All Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>