force-app/main/default/objects/Case_Product__c/fields/Basic_Data_Text_130_Character_Desc__c.field-meta.xml
<CustomField>
    <fullName>Basic_Data_Text_130_Character_Desc__c</fullName>
    <label>Basic Data Text (130 Character Desc)</label>
    <type>TextArea</type>
</CustomField>