force-app/main/default/objects/Case_Product__c/fields/BSO_Approval_Link__c.field-meta.xml
<CustomField>
    <fullName>BSO_Approval_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_350, FIND( '/services', $Api.Enterprise_Server_URL_350))+'apex/VFP01_CaseProductApproval?id=' +Case__c  ,
LEFT($Api.Enterprise_Server_URL_350, FIND( '/services', $Api.Enterprise_Server_URL_350))+'apex/VFP01_CaseProductApproval?id=' +Case__c)</formula>
    <label>BSO Approval Link</label>
    <type>Text</type>
</CustomField>