force-app/main/default/objects/Case_Product__c/fields/BSO_Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>BSO_Approver_Notes__c</fullName>
    <label>BSO/Approver Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>