force-app/main/default/objects/Case_Product__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>CASE( Case__r.RecordType.DeveloperName , 
'CFM_Cross_Business_Selling', 'CFM Price Request', 
'Deviated_Pricing', 'Deviated Price Request',
null)</formula>
    <label>Case  Type</label>
    <type>Text</type>
</CustomField>