force-app/main/default/objects/Case_Product__c/fields/CFM_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>CFM_Final_Price__c</fullName>
    <inlineHelpText>Indicate price to quote to customer</inlineHelpText>
    <label>CFM Final Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>