force-app/main/default/objects/Case_Product__c/fields/CFM_Price__c.field-meta.xml
<CustomField>
    <fullName>CFM_Price__c</fullName>
    <label>CFM Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>