force-app/main/default/objects/Case_Product__c/fields/Channel_Partner_Distributor_Est_Total__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Distributor_Est_Total__c</fullName>
    <formula>Requested_Distributor_Price__c * Anticipated_Annual_Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner/Distributor Est Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>