force-app/main/default/objects/Case_Product__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <description>The Code Type allows the PAS Team to track Code Types that the End User has to better inform the PAS Team what product the Customer is having issues with. If this field is populated, then the Code Number will be required.</description>
    <label>Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lot Number</fullName>
            </value>
            <value>
                <fullName>Manufacturing Code</fullName>
            </value>
            <value>
                <fullName>Serial Number</fullName>
            </value>
            <value>
                <fullName>Warranty Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>