force-app/main/default/objects/Case_Product__c/fields/Code_Value__c.field-meta.xml
<CustomField>
    <fullName>Code_Value__c</fullName>
    <description>The Code Value field will be populated with either a Serial Number, Lot Number, Warranty Code, or Manufacturing Code if the Code Type picklist is populated with a value.</description>
    <label>Code Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>