force-app/main/default/objects/Case_Product__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>