force-app/main/default/objects/Case_Product__c/fields/Competitor_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Name__c</fullName>
    <label>Competitor Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>