force-app/main/default/objects/Case_Product__c/fields/Competitor_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Price__c</fullName>
    <label>Competitor Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>