force-app/main/default/objects/Case_Product__c/fields/Competitor_Product_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Unit_of_Measure__c</fullName>
    <label>Competitor Product Unit of Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>