force-app/main/default/objects/Case_Product__c/fields/Competitor_Size__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Size__c</fullName>
    <label>Competitor Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>