force-app/main/default/objects/Case_Product__c/fields/Contract_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Contract_Picklist__c</fullName>
    <label>Contract Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>