force-app/main/default/objects/Case_Product__c/fields/Country_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Country_List_Price__c</fullName>
    <label>Country List Price (at Pricing Region)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>