force-app/main/default/objects/Case_Product__c/fields/Custom_Dimension_1_Width__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dimension_1_Width__c</fullName>
    <label>Custom Dimension 1 -Width</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>