force-app/main/default/objects/Case_Product__c/fields/Custom_Dimension_2_Length__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dimension_2_Length__c</fullName>
    <label>Custom Dimension 2 - Length</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>