force-app/main/default/objects/Case_Product__c/fields/Custom_Dimension_3_Other__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dimension_3_Other__c</fullName>
    <label>Custom Dimension 3 - Other</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>