force-app/main/default/objects/Case_Product__c/fields/Customer_Requiring_Specific_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requiring_Specific_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold to Account Requiring Specific Price</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Products</relationshipLabel>
    <relationshipName>Case_Products</relationshipName>
    <type>Lookup</type>
</CustomField>