force-app/main/default/objects/Case_Product__c/fields/Customer_Specific_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific_Price__c</fullName>
    <label>Customer Specific Price (Pricing Region)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>