force-app/main/default/objects/Case_Product__c/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <label>Delivering Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000-3M Alexandria</fullName>
            </value>
            <value>
                <fullName>1001-3M Ames</fullName>
            </value>
            <value>
                <fullName>1002-3M Aberdeen</fullName>
            </value>
            <value>
                <fullName>1003-3M Aston</fullName>
            </value>
            <value>
                <fullName>1004-3M Atlanta</fullName>
            </value>
            <value>
                <fullName>1005-3M Austin</fullName>
            </value>
            <value>
                <fullName>1007-3M Brookings</fullName>
            </value>
            <value>
                <fullName>1008-3M Brownwood</fullName>
            </value>
            <value>
                <fullName>1009-3M Chelmsford</fullName>
            </value>
            <value>
                <fullName>1010-3M Columbia</fullName>
            </value>
            <value>
                <fullName>1011-3M Conover</fullName>
            </value>
            <value>
                <fullName>1012-3M Cordova</fullName>
            </value>
            <value>
                <fullName>1013-3M US-MN Cottage Grove</fullName>
            </value>
            <value>
                <fullName>1014-3M Cumberland</fullName>
            </value>
            <value>
                <fullName>1015-3M Cynthiana</fullName>
            </value>
            <value>
                <fullName>1018-3M DeKalb (DKC)</fullName>
            </value>
            <value>
                <fullName>1019-3M Decatur</fullName>
            </value>
            <value>
                <fullName>1020-3M Eagan</fullName>
            </value>
            <value>
                <fullName>1021-3M Enfield</fullName>
            </value>
            <value>
                <fullName>1022-3M Flemington</fullName>
            </value>
            <value>
                <fullName>1023-3M Fairmont</fullName>
            </value>
            <value>
                <fullName>1024-3M US-IA Forest City</fullName>
            </value>
            <value>
                <fullName>1025-3M Greenville</fullName>
            </value>
            <value>
                <fullName>1026-3M Guin</fullName>
            </value>
            <value>
                <fullName>1027-3M Hartford City</fullName>
            </value>
            <value>
                <fullName>1028-3M US-MN Hutchinson</fullName>
            </value>
            <value>
                <fullName>1029-3M Indianapolis</fullName>
            </value>
            <value>
                <fullName>1030-3M US-CA Irvine</fullName>
            </value>
            <value>
                <fullName>1031-3M Knoxville IA</fullName>
            </value>
            <value>
                <fullName>1032-3M Mechanicsburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>