force-app/main/default/objects/Case_Product__c/fields/Delivery_Unit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Unit_Quantity__c</fullName>
    <label>Delivery Unit Quantity</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>