force-app/main/default/objects/Case_Product__c/fields/For_Return__c.field-meta.xml
<CustomField>
    <fullName>For_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track the products being returned.</description>
    <label>For Return?</label>
    <type>Checkbox</type>
</CustomField>