force-app/main/default/objects/Case_Product__c/fields/ForFullfillment__c.field-meta.xml
<CustomField>
    <fullName>ForFullfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Fullfillment?</label>
    <type>Checkbox</type>
</CustomField>