force-app/main/default/objects/Case_Product__c/fields/Global_Sales_Code_GSC__c.field-meta.xml
<CustomField>
    <fullName>Global_Sales_Code_GSC__c</fullName>
    <label>Global Sales Code (GSC)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>