force-app/main/default/objects/Case_Product__c/fields/Is_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Approver__c</fullName>
    <formula>$User.Id == Approver__c</formula>
    <label>Is Approver</label>
    <type>Checkbox</type>
</CustomField>