force-app/main/default/objects/Case_Product__c/fields/Is_it_a_Material_Variant_w_Price_Linking__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_Material_Variant_w_Price_Linking__c</fullName>
    <label>Is it a Material Variant w/Price Linking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>