force-app/main/default/objects/Case_Product__c/fields/Is_this_a_Planning_Material__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Planning_Material__c</fullName>
    <label>Is this a Planning Material?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>