force-app/main/default/objects/Case_Product__c/fields/Legacy_11_Digit_Phase_Out_SKU__c.field-meta.xml
<CustomField>
    <fullName>Legacy_11_Digit_Phase_Out_SKU__c</fullName>
    <label>Legacy 11-Digit Phase Out 3M ID #</label>
    <length>11</length>
    <type>Text</type>
</CustomField>