force-app/main/default/objects/Case_Product__c/fields/Local_Catalog_ID__c.field-meta.xml
<CustomField>
    <fullName>Local_Catalog_ID__c</fullName>
    <label>Local Catalog ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>