force-app/main/default/objects/Case_Product__c/fields/Manufacturing_Code_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Code_Warranty__c</fullName>
    <label>Manufacturing Code/Warranty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>