force-app/main/default/objects/Case_Product__c/fields/Material_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Material_Activation_Date__c</fullName>
    <inlineHelpText>Applies to ALL Sales Districts Listed in this Case.</inlineHelpText>
    <label>Material Activation Date</label>
    <type>Date</type>
</CustomField>