force-app/main/default/objects/Case_Product__c/fields/Minimum_Order_Quantity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Quantity_Unit__c</fullName>
    <label>Minimum Order Quantity Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity_unit_AU</fullName>
                <label>Activity unit - AU</label>
            </value>
            <value>
                <fullName>Assort - AS</fullName>
            </value>
            <value>
                <fullName>Bag - BAG</fullName>
            </value>
            <value>
                <fullName>Bottle - BT</fullName>
            </value>
            <value>
                <fullName>Canister - CAN</fullName>
            </value>
            <value>
                <fullName>Carton - CAR</fullName>
            </value>
            <value>
                <fullName>Case - CV</fullName>
            </value>
            <value>
                <fullName>Centimeter - CM</fullName>
            </value>
            <value>
                <fullName>Crate - CRT</fullName>
            </value>
            <value>
                <fullName>Cubic centimeter - CCM</fullName>
            </value>
            <value>
                <fullName>Cubic decimeter - CD3</fullName>
            </value>
            <value>
                <fullName>Cubic foot - FT3</fullName>
            </value>
            <value>
                <fullName>Cubic inch - IN3</fullName>
            </value>
            <value>
                <fullName>Cubic meter - M3</fullName>
            </value>
            <value>
                <fullName>Cubic yard - YD3</fullName>
            </value>
            <value>
                <fullName>Cylinder - CY</fullName>
            </value>
            <value>
                <fullName>Degree - DEG</fullName>
            </value>
            <value>
                <fullName>Dozen - DZ</fullName>
            </value>
            <value>
                <fullName>Drum - DR</fullName>
            </value>
            <value>
                <fullName>each - EA</fullName>
            </value>
            <value>
                <fullName>Foot - FT</fullName>
            </value>
            <value>
                <fullName>Grain - GR</fullName>
            </value>
            <value>
                <fullName>Gram - G</fullName>
            </value>
            <value>
                <fullName>Gram/Cubic meter - GM3</fullName>
            </value>
            <value>
                <fullName>Group - PRC</fullName>
            </value>
            <value>
                <fullName>Hectare - HA</fullName>
            </value>
            <value>
                <fullName>Hours - HR</fullName>
            </value>
            <value>
                <fullName>Inch - IN</fullName>
            </value>
            <value>
                <fullName>Intermediate Bulk Container - IBC</fullName>
            </value>
            <value>
                <fullName>Kilogram - KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>