force-app/main/default/objects/Case_Product__c/fields/Minimum_Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Standard_Price__c</fullName>
    <label>Minimum Stdrd Price (at Pricing Region)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>