force-app/main/default/objects/Case_Product__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <label>Minimum Order Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>