force-app/main/default/objects/Case_Product__c/fields/NCI_Free_Product__c.field-meta.xml
<CustomField>
    <fullName>NCI_Free_Product__c</fullName>
    <inlineHelpText>Select Free Product</inlineHelpText>
    <label>NCI Free Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCI_Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 3M™ Accuspray™ 12S-Pro9 HVLP Spray Gun | 60-4550-5014-0</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ 400 mL Manual Applicator and 1 bag of 3M™ Scotch-Weld™ EPX™ Square Gold 400 mL mixing nozzle | 62-9148-9930-7, 62-9176-9127-1</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ 400 mL Pneumatic Applicator and 1 bag of 3M™ Scotch-Weld™ EPX™ Square Gold 400 mL mixing nozzle | 62-9145-9930-3, 62-9176-9127-1</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ 490 mL Manual Applicator and 1 bag of 3M™ Scotch-Weld™ EPX™ Helical Orange 490 mL mixing nozzle | 62918299306, 62-9158-9136-0</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ 490 mL Pneumatic Applicator and 1 bag of 3M™ Scotch-Weld™ EPX™ Helical Orange 490 mL mixing nozzle | 62-9152-9930-9, 62-9158-9136-0</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ Plus II Applicator and 1 bag of 12 Square Gold Mix Nozzles | 62-9170-9930-1, 62-9171-9153-8</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ Plus II Applicator and 1 bag of 3M™ Scotch-Weld™ EPX™ Square Green 48 mL mixing nozzle | 62-9170-9930-1, 62-9154-9148-4</fullName>
            </value>
            <value>
                <fullName>1 3M™ EPX™ Plus II Applicator and 1 bag of 3M™ Scotch-Weld™ EPX™ Square Orange 45 mL mixing nozzle | 62-9170-9930-1, 62-9154-9136-9</fullName>
            </value>
            <value>
                <fullName>1 3M™ Hot Melt Applicator LT Q | 62-9281-9950-4</fullName>
            </value>
            <value>
                <fullName>1 3M™ Hot Melt Applicator TC Q | 62-9990-9950-0</fullName>
            </value>
            <value>
                <fullName>1 3M™ Manual Applicator 310M for 310 mL Cartridges | 62-9890-9930-4</fullName>
            </value>
            <value>
                <fullName>1 3M™ Manual Applicator 400M for 400 mL Sausage Packs | 62-9890-9940-3</fullName>
            </value>
            <value>
                <fullName>1 3M™ Manual Applicator 600M for 600 mL Sausage Packs | 62-9890-9950-2</fullName>
            </value>
            <value>
                <fullName>1 3M™ Pneumatic Applicator 600A for 600 mL Sausage Packs | 62-9890-9960-1</fullName>
            </value>
            <value>
                <fullName>1 3M™ Two-Component Adhesive Sealant Applicator 400A-2K and 5 cases of Nozzles | 62-9890-9990-8, 62-9890-9150-9</fullName>
            </value>
            <value>
                <fullName>1 case of 3M™ Sprayable Hot Melt Adhesive 6111 | 62-6111-9335-0</fullName>
            </value>
            <value>
                <fullName>1 case of 3M™ Sprayable Hot Melt Adhesives 6111HT Blue | 62-6115-9335-1</fullName>
            </value>
            <value>
                <fullName>1 case of 3M™ Sprayable Hot Melt Adhesives 6111HT Tan | 62-6113-9335-6</fullName>
            </value>
            <value>
                <fullName>1 case of 3M™ Sprayable Hot Melt Adhesives 6116 | 62-6116-9335-9</fullName>
            </value>
            <value>
                <fullName>1 oz. case of 3M™ Scotch-Weld™ Plastic and Rubber Instant AdhesivePR100 | 62616403507</fullName>
            </value>
            <value>
                <fullName>3M™ Lane Marking Applicator M-1 | 70-0067-5895-0</fullName>
            </value>
            <value>
                <fullName>3M™ Scotch-Weld™ Multi-Material Composite Urethane Adhesive DP6310NS</fullName>
            </value>
            <value>
                <fullName>3M™ Scotch-Weld™ Multi-Material Composite Urethane Adhesive DP6330NS</fullName>
            </value>
            <value>
                <fullName>3M™ Scotch-Weld™ PUR Easy 250 Adhesive Applicator Gold, 120V | 62-9865-9930-6</fullName>
            </value>
            <value>
                <fullName>3M™ Scotch-Weld™ PUR Easy 250 Adhesive Applicator Gold, 120V and 3M™ Scotch-Weld™ PUR Easy 250 Cartridge Pre-heater, 120V | 62-9865-9930-6/62-9865-9935-5</fullName>
            </value>
            <value>
                <fullName>5 AE II LT Applicator | 62979993077</fullName>
            </value>
            <value>
                <fullName>One Large 60 CA Cylinder | 62-4952-8030-7</fullName>
            </value>
            <value>
                <fullName>One Large 70 Cylinder | 62-4983-8030-2</fullName>
            </value>
            <value>
                <fullName>One Large 74 Clear Cylinder | 62-4974-8030-1</fullName>
            </value>
            <value>
                <fullName>One Large 74 NF Clear Cylinder | 62-4998-8030-0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>