force-app/main/default/objects/Case_Product__c/fields/NCI_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>NCI_Product_Group__c</fullName>
    <inlineHelpText>Select Product Group of product purchased</inlineHelpText>
    <label>NCI Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3M Adhesive Sealants</fullName>
            </value>
            <value>
                <fullName>3M Hot Melt Adhesives</fullName>
            </value>
            <value>
                <fullName>3M Scotch-Weld Instant Adhesives</fullName>
            </value>
            <value>
                <fullName>3M Scotch-Weld PUR Adhesives</fullName>
            </value>
            <value>
                <fullName>3M Scotch-Weld Structural Adhesives</fullName>
            </value>
            <value>
                <fullName>3M Spray Adhesives</fullName>
            </value>
            <value>
                <fullName>3M Vinyl Lane Marking Tapes</fullName>
            </value>
            <value>
                <fullName>North Star Cylinder Adhesive</fullName>
                <isActive>false</isActive>
                <label>North Star Cylinder Adhesive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>